--- a/software/src/omaha/templates/components/omaha-drawer.html
+++ b/software/src/omaha/templates/components/omaha-drawer.html
@@ -1,6 +1,7 @@
 <link rel="import" href="/bower_components/polymer/polymer.html">
 <link rel="import" href="/bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="/bower_components/iron-icons/maps-icons.html">
+<link rel="import" href="/bower_components/iron-icons/device-icons.html">
 <link rel="import" href="/bower_components/iron-icon/iron-icon.html">
 <dom-module id="omaha-drawer">
   <template>
@@ -16,12 +17,13 @@
       }
     </style>
     <paper-menu attr-for-selected="page" id="menu" selected="{{selected}}">
-      <paper-item page="information">Information<iron-icon class="icon" icon="dashboard"></iron-icon></paper-item>
-      <paper-item page="map">Map<iron-icon class="icon" icon="maps:map"></iron-icon></paper-item>
-      <paper-item page="accountCreation">Admin<iron-icon class="icon" icon="account-circle"></iron-icon></paper-item>
+      <paper-item page="information">Information<iron-icon  class="icon" icon="dashboard"></iron-icon></paper-item>
+      <paper-item page="map">Map<iron-icon                  class="icon" icon="maps:map"></iron-icon></paper-item>
+      <paper-item page="accountCreation">Admin<iron-icon    class="icon" icon="account-circle"></iron-icon></paper-item>
       <!-- <paper-item page="zoneCreation">Zone Creation</paper-item> -->
-      <paper-item page="zoneMap">Update Zones<iron-icon class="icon" icon="settings-overscan"></iron-icon></paper-item>
-      <paper-item page="pagingMap">Paging<iron-icon class="icon" icon="maps:local-phone"></iron-icon></paper-item>
+      <paper-item page="zoneMap">Update Zones<iron-icon     class="icon" icon="settings-overscan"></iron-icon></paper-item>
+      <paper-item page="pagingMap">Paging Dialer<iron-icon         class="icon" icon="maps:local-phone"></iron-icon></paper-item>
+      <paper-item page="timeScheduling">Scheduling<iron-icon     class="icon" icon="device:access-alarms"></iron-icon></paper-item>
     </paper-menu>
   </template>
   <script>
