--- a/software/src/omaha/templates/components/paging-controller-navbar.html
+++ b/software/src/omaha/templates/components/paging-controller-navbar.html
@@ -73,16 +73,56 @@
         text-align: center;
       }
 
+      paper-item::shadow .button-content {
+        padding: 0;
+        width: 100%;
+        text-align: center;
+      }
+
+      .pagingZoneStyle {
+        background: rgba(63, 81, 181, .1); 
+        border-style: solid; 
+        border-radius: 5px; 
+        border-width: 1px; 
+        border-color: #3f51b5; 
+        margin: 5px; 
+      }
+
     </style>
     <div id="pagingMapContainer" style="width: 75%; height: 100%; float: left;"></div>
     <div id="selectedSpeakers" style="border-left: 2px solid #3f51b5; margin-left: 75%; width: 25%; height: 90%;">
       <body class="fullbleed layout vertical">
         <paper-header-panel mode="waterfall" style="background-color: #fff">
           <paper-toolbar>
-            <div>Selected Speakers<h6 style="margin: 0px; text-align: center;">make this centered</h6><h6 style="margin: 0px; text-align: center;">make an escape event key that will clear this</h6><h6 style="margin: 0px; text-align: center;"></div>
+            <div style="text-align: center; width: 100%;"><font>Selected Speakers</font><h6 style="margin: 0px; text-align: center;">make an escape event key that will clear this</h6><h6 style="margin: 0px; text-align: center;"></div>
           </paper-toolbar>
           <div id="dropShadow" class="style-scope paper-header-panel has-shadow"></div>
-          <div id="pagingSpeakerHolder" style=""></div>
+          <div id="pagingSpeakerHolder">
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">Marketing</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">Lobby</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">Conference Room 1</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">Andy</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">Bruce</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">Danny</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+             <paper-item center-justified flex class="pagingZoneStyle" onclick="thisClick()"><font style="text-align: center; width: 100%;">"And Another One"</font></paper-item>
+
+          </div>
         </paper-header-panel>
       </body>
     </div>
@@ -90,7 +130,7 @@
     <div id="buttonHolder" style="border-left: 2px solid #3f51b5; background-color: #fff; margin-left: 75%; width: 25%; height: 10%;">
       <paper-card class="layout horizontal">
         <div class="card-content">
-          <paper-button on-click="_createZone" style="margin-left: 12%;">Make zone</paper-button></div>
+          <paper-button on-click="_createZone" style="margin-left: 12%;">Dial</paper-button></div>
           <paper-dropdown-menu id="zoneMenu" no-label-float label="Zone:" style="margin-top: 4%; margin-left: 8%;">
           <paper-listbox id="zoneListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
             <!--<template if="{{this.speaker.Response}}">
@@ -143,6 +183,10 @@
   </template>
 
   <script>
+
+  function thisClick() {
+    console.log("hi");
+  }
 
   // the name needs to be limited to 50 characters
 
