--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -90,7 +90,7 @@
         <paper-radio-button id="volumeButton"     name="volume"     class="flex">Volume</paper-radio-button>
         <paper-radio-button id="averagingButton"  name="averaging"  class="flex">Comfort Ratio</paper-radio-button>
         <paper-radio-button id="targetButton"     name="target"     class="flex">Target</paper-radio-button>
-        <paper-radio-button id="equalizerButton"  name="equalizer"  class="flex">Equalizer</paper-radio-button>
+        <paper-radio-button id="equalizerButton"  name="equalizer"  class="flex">Equalizers</paper-radio-button>
         <paper-radio-button id="pagingButton"     name="paging"     class="flex">Paging</paper-radio-button>
       </paper-radio-group>
     </div>
