--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -126,7 +126,7 @@ paper-tabs paper-tab.iron-selected {
   width: 100%; 
   /* height: 100vh; */
   margin: 0px;
-  height: 150%;
+  height: calc(150%);
 }
 
 .custom {
@@ -158,8 +158,8 @@ paper-tabs paper-tab.iron-selected {
   border-style: solid;
   border-color: #3f51b5;*/
 
-  font-weight: bold; 
-  font-size: calc(.018 * 100vw);
+  font-weight: bold;
+  font-size: calc(.009 * 100vw);
   /*width: calc(.028 * 100vw);*/
   width: 220%;
   color: #3f51b5;
