--- a/software/src/omaha/templates/components/paging-controller-navbar.html
+++ b/software/src/omaha/templates/components/paging-controller-navbar.html
@@ -127,7 +127,7 @@
       </body>
     </div>
 
-    <div id="buttonHolder" style="border-left: 2px solid #3f51b5; background-color: #fff; margin-left: 75%; width: 25%; height: 10%;">
+    <div id="buttonHolder" style="border-left: 2px solid #3f51b5; border-top: 2px solid #3f51b5; background-color: #fff; margin-left: 75%; width: 25%; height: 15%;">
       <paper-card class="layout horizontal">
         <div class="card-content">
           <paper-button on-click="_createZone" style="margin-left: 12%;">Dial</paper-button></div>
