--- a/software/src/omaha/templates/components/paging-controller-navbar.html
+++ b/software/src/omaha/templates/components/paging-controller-navbar.html
@@ -50,6 +50,10 @@
         height: 100%;
       }
 
+      #mainContainer {
+        overflow-y: hidden;
+      }
+
       #mainContainer.paper-header-panel {
         position: relative;
         overflow-y: scroll;
@@ -92,9 +96,9 @@
     <div id="pagingMapContainer" style="width: 75%; height: 100%; float: left;"></div>
     <div id="selectedSpeakers" style="border-left: 2px solid #3f51b5; margin-left: 75%; width: 25%; height: 90%;">
       <body class="fullbleed layout vertical">
-        <paper-header-panel mode="waterfall" style="background-color: #fff">
+        <paper-header-panel mode="waterfall" style="overflow-y: hidden; background-color: #fff">
           <paper-toolbar>
-            <div style="text-align: center; width: 100%;"><font>Selected Speakers</font><h6 style="margin: 0px; text-align: center;">make an escape event key that will clear this</h6><h6 style="margin: 0px; text-align: center;"></div>
+            <div style="text-align: center; width: 100%;"><font>Zones and Speakers</font><h6 style="margin: 0px; text-align: center;">make an escape event key that will clear this</h6><h6 style="margin: 0px; text-align: center;"></div>
           </paper-toolbar>
           <div id="dropShadow" class="style-scope paper-header-panel has-shadow"></div>
           <div id="pagingSpeakerHolder">
@@ -127,7 +131,7 @@
       </body>
     </div>
 
-    <div id="buttonHolder" style="border-left: 2px solid #3f51b5; border-top: 2px solid #3f51b5; background-color: #fff; margin-left: 75%; width: 25%; height: 15%;">
+    <div id="buttonHolder" style="border-left: 2px solid #3f51b5; border-top: 2px solid #3f51b5; background-color: #fff; margin-left: 75%; width: 25%; height: 9.8%;">
       <paper-card class="layout horizontal">
         <div class="card-content">
           <paper-button on-click="_createZone" style="margin-left: 12%;">Dial</paper-button></div>
