--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -85,9 +85,9 @@
 
         <paper-radio-group id="equalizerSelector" selected="{{mode}}">
           <!-- <paper-radio-button id="informationButton" name="information" class="flex">Information</paper-radio-button> -->
-          <paper-radio-button id="maskingButton" name="masking"  class="flex">Masking</paper-radio-button>
-          <paper-radio-button id="musicButton"   name="music"    class="flex">Music</paper-radio-button>
-          <paper-radio-button id="pagingButton"  name="paging"   class="flex">Paging</paper-radio-button>
+          <paper-radio-button id="maskingButton" name="masking"  onclick="equalizerChanged()" class="flex">Masking</paper-radio-button>
+          <paper-radio-button id="musicButton"   name="music"    onclick="musicChanged()"     class="flex">Music</paper-radio-button>
+          <paper-radio-button id="pagingButton"  name="paging"                                class="flex">Paging</paper-radio-button>
         </paper-radio-group>
 
         <neon-animated-pages attr-for-selected="page" selected="[[mode]]" class="flex">
@@ -197,9 +197,19 @@
       <div class="message">{{err}}</div>
       <paper-input id="popupInput" label="" placeholder="Enter new preset name" text-align="center"></paper-input>
       <div class="buttons">
-      <paper-button ondialog-confirm on-click="_acceptPressed">Add</paper-button>
-      <paper-button dialog-dismiss on-click="_cancelPressed">Cancel</paper-button>
+        <paper-button ondialog-confirm on-click="_acceptPressed">Add</paper-button>
+        <paper-button dialog-dismiss on-click="_cancelPressed">Cancel</paper-button>
     </div>
+    </paper-dialog>
+
+    <paper-dialog id="switchingToMusicDialog" heading="this is a title" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal="true">
+      <h1 style="text-align: center; padding-top: 24px; padding-bottom: 5px; margin: 0px;">Warning</h1>
+      <div style="text-align: center; margin-top: 0px; padding: 5% 5% 5% 5%;">You are switching the speaker to music mode
+        <br>The speaker will only be able to produce music in this mode
+      </div>
+      <div class="butons" style="margin: 0; border-top: 1px rgba(201, 201, 201, .6) solid; padding: 5%;">
+      <paper-button ondialog-confirm style="margin: 0.5em 1em 0.5em 1em;" on-click="_acceptChangePressed">Switch</paper-button>
+      <paper-button dialog-dismiss on-click="_cancelChangePressed">Cancel</paper-button></div>
     </paper-dialog>
 
       <div class="card-actions">
@@ -220,6 +230,20 @@
             </template>-->
               <paper-item id="Currently Applied" value="Currently Applied">Currently Applied</paper-item>
               <paper-item id="Add New Preset" value="Add New Preset">Add New Preset</paper-item>   
+          </paper-listbox>
+        </paper-dropdown-menu>
+        <paper-dropdown-menu class="papercardcenter" id="musicMenu" style="position: absolute; left: 778px; visibility: hidden;" no-label-float label="Music Preset:">
+          <paper-listbox id="musicListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
+            <!--<template if="{{this.speaker.Response}}">
+              <paper-dropdown-menu selected="{{selected}}">
+                <template repeat="{{label in this.speaker.PresetNames}}">
+                  <paper-item value="{{i}}" label="{{label}}"></paper-item>
+                </template>
+              </paper-dropdown-menu>  
+            </template>-->
+              <paper-item id="Currently Applied" value="Currently Applied">Currently Applied</paper-item>
+              <paper-item id="Add New Preset" value="Add New Preset">Add New Preset</paper-item>  
+              <paper-item id="Music Test" value="Music Test">Music Test</paper-item>   
           </paper-listbox>
         </paper-dropdown-menu>
         <span>{{value}}</span>
@@ -310,6 +334,19 @@
     iirConstants[loopVar] = 0;
   }
   console.log(iirConstants);
+
+  function musicChanged() {
+    musicMenu.style.visibility = "visible";
+    equalizerMenu.style.visibility = "hidden";
+    document.querySelector("#switchingToMusicDialog").toggle();
+
+  }
+
+  function equalizerChanged() {
+    musicMenu.style.visibility = "hidden";
+    equalizerMenu.style.visibility = "visible";
+  }
+
 
     Polymer({
       is: 'equalizer-controller',
@@ -581,9 +618,9 @@
       }
     });
 
-      function showToast() {
-        console.log("gi");
-      }
+    function showToast() {
+      console.log("gi");
+    }
 
     function inputChanged() {
         var error = false;
@@ -704,8 +741,8 @@ $(function() {
       $("#text" + (i + 1)).val($(".custom > .custom_slider").slider("value"));
     });
   });
-/*
-  $(function() {
+
+  /*$(function() {
     $(document.getElementById("custom_container_masking").getElementsByClassName("custom_slider")).each(function(i) {
 
       //console.log(this);
